--- a/views/books.ejs
+++ b/views/books.ejs
@@ -17,6 +17,6 @@
               <%  }); %>
             </ul>
         <% } %>
-        <a href="/user/set">Login </a>
+        <partials/login.ejs />
     </body>
 </html>
