--- a/views/set-user-session.ejs
+++ b/views/set-user-session.ejs
@@ -22,6 +22,6 @@
                 <p>No user has been found.</p>
             <% } %>
             <p> The page you are looking for does not exist.</p>
-            <a href="/">Back to Hme</a> 
+            <partials/back.ejs />
     </body>
 </html>
